[tool.poetry]
name = "op"
version = "0.1.0"
description = "1password wrapper for Python"
authors = ["Maurício Dias <mauricio@mauricio.cc>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.semantic_release]
version_variable = [
    "op/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
